Simply twelve data migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,7 @@ springdoc.group-configs[0].paths-to-match=/api/users/**
 springdoc.group-configs[1].group=stock
 springdoc.group-configs[1].paths-to-match=/api/stock/**
 
+server.error.include-stacktrace=never
+
 twelvedata.api.key=${GRADLE_ENV_TWELVE_DATA_API_KEY:demo}
 twelvedata.base-url=https://api.twelvedata.com
